test/files/neg/t0418.check
t0418.scala:2: error: not found: value Foo12340771
  null match { case Foo12340771.Bar(x) => x }
                    ^
t0418.scala:2: error: not found: value x
  null match { case Foo12340771.Bar(x) => x }
                                          ^
two errors found
